# TypeForge

./: .gitignore  DEVELOPING.md  Evaluation.md  Graph_check_TODO  LICENSE  README.md  build.gradle  extension.properties
demo/: README.md  TypeConstraint_1539724c_global_morph.json  TypeConstraint_746192c2_range_morph.json  TypeConstraint_f2b22cd2_final.json  TypeConstraint_f8591481_final_DI.json  varType.json
ghidra_scripts/: BluePrint.java  GraphExplorer.py  GroundTruth.java  Statistics.java  TypeClay.java  TypeForge.java  statistics.java
ghidra_scripts/evaluate/: GroundTruth_run.py  Metrics.py
ghidra_scripts/judge/: README.md  double_elimination.py  llm.py  main.py  pyproject.toml  requirements.txt  test_double_elimination.py
ghidra_scripts/llm/: DoubleEliminationSimulator.py
scripts/: GraphExplorer.py  GroundTruthExtractor.py  README.md  TypeInference.py  config.yml  requirements.txt
scripts/judge/: README.md  double_elimination.py  llm.py  main.py
src/main/java/blueprint/base/: CallGraph.java  DataTypeNode.java  FunctionNode.java  GraphBase.java  Node.java  NodeBase.java  SDGraph.java
src/main/java/blueprint/solver/: Context.java  Generator.java  InterSolver.java  IntraSolver.java  PCodeVisitor.java  TypeBuilder.java
src/main/java/blueprint/utils/: DataTypeHelper.java  DecompilerHelper.java  FunctionHelper.java  Global.java  GlobalState.java  GraphHelper.java  Helper.java  HighSymbolHelper.java  Logging.java  TCHelper.java
src/main/java/typeclay/solver/: Generator.java  InterSolver.java  IntraSolver.java  (+2 more)
src/main/resources/: log4j2_default.xml
(+181 files in other folders)
