[project]
name = "judge"
version = "0.1.0"
description = "An LLM-assisted judging tool for decompiled code readability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=0.3.54",
    "langchain[openai]>=0.3.23",
    "pydantic>=1.10.2",
    "aiofiles>=0.8.0",
]
